@@ -986,7 +986,7 @@ PROP_REQCAPACITY=\
 Property   : Prop_ReqCapacity\n\r\
 Targets    : Areas, Room\n\r\
 Parameters : PEOPLE=[MAX] PLAYERS=[MAX] MOBS=[MAX] ITEMS=[MAX] WEIGHT=[MAX] INDOOR=[T/F]\n\r\
-Parameters : CONTAINERSOK=[T/F]\n\r\
+Parameters : CONTAINERSOK=[T/F] ROOMS=[MAX]\n\r\
 Example    : people=2\n\r\
 Example    : players=3 mobs=2 indoor=true\n\r\
 Example    : weight=2000 items=10\n\r\
@@ -1001,7 +1001,12 @@ number of players or non-player mobs respectively.  The optional INDOOR flag onl
 if this property is added to an area; it makes the property only enforce itself on indoor \
 rooms types.\n\r\
 \n\r\
-If no parameters at all are given, a PEOPLE capacity of 2 is assumed.
+If no parameters at all are given, a PEOPLE capacity of 2 is assumed.\n\r\
+\n\r\
+When this property is on an entry room with Prop_LotsForSale or Prop_LotForSale, \
+then this property will be automatically propogated to each new room created.  Also, in this \
+case, and the optional parameter ROOMS can be specified to limit the maximum number of \
+contiguous new rooms that can be generated. 
 
 PROP_REQCLASSES=\
 Property   : Prop_ReqClasses\n\r\
